tests/comp/sem/invalid/incorrect_main.mj
class Test {
	public static void main/***wrong***/(String[] args) {}
}
